Upgrade PlantUML to plantuml-asl-1.2022.1
Signed-off-by: Sjoerd Talsma <sjoerd@talsma-ict.nl>